# Orderly

./: .gitignore  README.md  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.js
.github/workflows/: ci.yml  release-tauri.yml
docs/: NEXT_STEPS.md  README.md  RELEASE_CHECKLIST.md  TECH_SPEC.md  UI样式建议.md
plans/: IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  NEXT_STEPS_IMPLEMENTATION_PLAN.md  README.md
plans/ui-style-v2/: IMPLEMENTATION_PLAN.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  db.rs  lib.rs  orders.rs  settings.rs  time.rs
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx
src/lib/: backend.ts  errors.ts  mockBackend.ts  money.ts  runtime.ts
tests/e2e/: app.spec.ts
